--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Enter password" required>
+                <input type="password" class="form-control" id="password" placeholder="3*A**i*" required>
             </div>
             <button type="submit" class="btn btn-signin">Sign In</button>
             <div id="error-message" class="alert alert-danger mt-3" role="alert">
